# retrotv

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SYNC_NOTES.md  cli.py  config.example.yaml  config.py  docker-compose.yaml  pyproject.toml  requirements.txt
api/: app.py
api/routes/: __init__.py  cursors.py  filler.py  guides.py  schedules.py  settings.py  sources.py
connectors/: __init__.py  base.py  emby.py  jellyfin.py  plex.py
db/: __init__.py
docs/: 01_OVERVIEW.md  02_ARCHITECTURE.md  03_DATA_MODELS.md  04_MODULES.md  05_API_INTEGRATIONS.md  06_USER_INTERFACE.md  07_CONFIG_DEPLOY.md  08_EXAMPLE_CODE.md  09_DEV_STEPS.md  10_FUTURE_ROADMAP.md  README.md
guides/: sample_nbc_1985.json
models/: guide.py  media.py  substitution.py
retrotv/: README.md  __init__.py  cli.py  config.py  main.py
retrotv/api/: __init__.py  app.py
retrotv/connectors/: __init__.py  base.py  emby.py
retrotv/db/: database.py
retrotv/export/: __init__.py  deployment.py  ersatztv.py  ersatztv_api.py  tunarr.py
retrotv/ingestion/: __init__.py  base.py  csv_parser.py  json_parser.py  normalizer.py  xml_parser.py
retrotv/matching/: __init__.py  fuzzy.py  matcher.py
retrotv/models/: __init__.py  media.py  schedule.py
retrotv/scheduling/: __init__.py  ad_calculator.py  builder.py
retrotv/services/: __init__.py  cursor_service.py  ersatztv_service.py  filler_service.py  guide_service.py  library_service.py  schedule_service.py
retrotv/sources/: __init__.py  builder.py  networks.py  presets.py  scraper.py  shows_db.py  templates.py
retrotv/substitution/: __init__.py  engine.py
retrotv/ui/: __init__.py
tests/: test_ersatztv_service.py  test_fuzzy_matcher.py  test_matcher.py  test_media_library_index.py  test_models.py  test_networks.py  test_normalizer.py  test_scraper.py  test_scraper_integration.py  test_services.py  test_substitution.py
ui/templates/: index.html
(+8 files in other folders)
