[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retrotv"
version = "1.0.0"
description = "Recreate historical TV channel schedules"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "RetroTV Project"}
]
keywords = ["tv", "jellyfin", "plex", "ersatztv", "tunarr", "schedule"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "rapidfuzz>=3.5.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "defusedxml>=0.7.0",
    "python-dateutil>=2.8.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
retrotv = "retrotv.cli:main"

[project.urls]
Homepage = "https://github.com/gunnard/retrotv"
Documentation = "https://github.com/gunnard/retrotv#readme"
Repository = "https://github.com/gunnard/retrotv"

[tool.setuptools.packages.find]
where = ["."]
include = ["retrotv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live network tests (deselected by default, run with -m integration)",
]
addopts = "-m 'not integration'"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
